<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
   >

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="7dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:backgroundTint="@color/purewhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="5dp"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp"
                card_view:cardMaxElevation="2dp"
                card_view:contentPadding="4dp">

            <LinearLayout
                android:background="@color/purewhite"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textAlignment="center"
                    android:fontFamily="serif"
                    android:textStyle="bold"
                    android:text="Balance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </TextView>

                <LinearLayout
                    android:layout_marginBottom="6sp"
                    android:layout_height="40dp"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">


                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_gravity="center">

                        <TextView
                            android:id="@+id/totalAmount"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:layout_marginRight="10dp"
                            android:gravity="center"
                            android:fontFamily="serif"
                            android:layout_gravity="center"
                            android:text="0"
                            android:textSize="18sp"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:background="#c0c0c0">

                    </View>

                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_gravity="center">

                        <ImageView
                            android:layout_height="wrap_content"
                            android:layout_width="30dp"
                            android:src="@drawable/coinmobcandy"/>

                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:layout_marginRight="10dp"
                            android:id="@+id/totalCoins"
                            android:gravity="center"
                            android:fontFamily="serif"
                            android:text="0"
                            android:textSize="18sp"
                            android:textColor="@color/black"/>



                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>


            </androidx.cardview.widget.CardView>



            <androidx.cardview.widget.CardView
                android:backgroundTint="@color/purewhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="5dp"
                android:background="@color/purewhite"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp"
                card_view:cardMaxElevation="2dp"
                card_view:contentPadding="4dp">


                <LinearLayout
                    android:background="@color/purewhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:fontFamily="serif"
                        android:text="@string/selectpayment"
                        android:textColor="@color/black"
                        android:textStyle="bold" />


                    <RadioGroup
                        android:id="@+id/radiogroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:id="@+id/paytm"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp"
                            android:layout_marginBottom="5dp"
                            android:checked="true"
                            android:text="Paytm"
                            android:fontFamily="serif"
                            android:layout_marginLeft="5sp"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            android:drawablePadding="10dp"
                             />


                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="5dp"
                android:background="@color/purewhite"
                android:backgroundTint="@color/purewhite"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp"
                card_view:cardMaxElevation="2dp"
                card_view:contentPadding="4dp">


                <LinearLayout
                    android:background="@color/purewhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                    </Spinner>
                    </LinearLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:backgroundTint="@color/purewhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="5dp"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp"
                card_view:cardMaxElevation="2dp"
                card_view:contentPadding="4dp">


                <LinearLayout
                    android:background="@color/purewhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/emailId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:fontFamily="serif"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="12sp"
                        android:layout_marginBottom="12sp"
                        android:inputType="textEmailAddress"
                        android:background="@android:color/transparent"
                        android:textColorHint="@color/black" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:backgroundTint="@color/purewhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="5dp"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp"
                card_view:cardMaxElevation="2dp"
                card_view:contentPadding="4dp">

                <LinearLayout
                    android:background="@color/purewhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enternumber"
                        android:inputType="number"
                        android:maxLength="10"
                        android:fontFamily="serif"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="12sp"
                        android:layout_marginBottom="12sp"
                        android:background="@android:color/transparent"
                        android:textColorHint="@color/black" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/withdrawNow"
                android:backgroundTint="@color/purewhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="2dp"
                android:layout_marginBottom="5dp"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp"
                card_view:cardMaxElevation="2dp"
                card_view:contentPadding="4dp">



                <LinearLayout
                    android:background="@color/purewhite"
                    android:id="@+id/withdrawMoney"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/withdrawmoney11" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="center"
                        android:text="@string/withdrawnow"
                        android:fontFamily="serif"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/commonTextSize"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>



            <LinearLayout
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/purewhite"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="5sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="5sp"
                    android:text="* Withraw Rules"
                    android:textSize="15sp"
                    android:fontFamily="serif"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <WebView
                    android:id="@+id/transText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>